--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
 
 
       <div class="match-link"
-     data-frame="https://thedaddy.to/embed/stream-429.php">
+     data-frame="https://topembed.pw/channel/FanDuelSportsOhio[USA]">
   <div class="match-card">
-    <div class="match-league">SOCCER</div>
-    <div class="match-title">Baltimore Orioles vs New York Mets</div>
+    <div class="match-league">WNBA</div>
+    <div class="match-title">Atlanta Dream W - Golden State Valkyries W
+</div>
     <div class="match-time">July 8, 2025 - 3:00 PM ET</div>
   </div>
 </div>
