--- a/watch/index.html
+++ b/watch/index.html
@@ -1,16 +1,17 @@
-
 <!--DOCTYPE html-->
 <html lang="en">
-
 <head>
-  <script type='text/javascript' src='//pl18225233.profitableratecpm.com/62/1e/63/621e63bf6da18651a3013b58396ea42e.js'></script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>24/7 - Live Sports</title>
- <link rel="icon" type="image/png" href="https://img.freepik.com/premium-vector/sports-brand-logo-vector-32_666870-2794.jpg">
-  <style>
-    body{margin:0;font-family:'Segoe UI',sans-serif;background-color:oklch(0.145 0 0);color:#e7ffe7;}.container{display:flex;justify-content:center;padding:30px 15px;}.content-box{background:oklch(0.205 0 0);border-radius:12px;max-width:1200px;width:100%;display:flex;padding:20px;border:1px solid #222;gap:20px;}.main-content{flex:0 0 70%;}.ad-center{display:flex;justify-content:center;margin:10px 0;}.iframe-container{position:relative;width:100%;padding-top:56.25%;border-radius:10px;overflow:hidden;margin:15px 0;}.post-icons{display:none;}.iframe-container iframe{position:absolute;top:0;left:0;width:100%;height:100%;border:none;border-radius:10px;}.sidebar{flex:0 0 30%;display:flex;flex-direction:column;gap:20px;}.sidebar .ad{width:100%;overflow:hidden;}@media (max-width:768px){.container{flex-direction:column;padding:10px;}.content-box{flex-direction:column;padding:10px;align-items:center;}.main-content,.sidebar{width:100%;}.sidebar{flex-direction:column;align-items:center;gap:20px;margin-top:20px;}.sidebar .ad{width:100%;max-width:100%;}.ad-center{justify-content:center;margin:10px 0;}.iframe-container{width:100%;padding-top:56.25%;}}
-  </style>
+  <link href="./style.css" rel="stylesheet" />
+   <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="./favicon.png"
+    />
+    <style>  body{margin:0;font-family:'Segoe UI',sans-serif;background-color:oklch(0.145 0 0);color:#e7ffe7;}.container{display:flex;justify-content:center;padding:30px 15px;}.content-box{background:oklch(0.205 0 0);border-radius:12px;max-width:1200px;width:100%;display:flex;padding:20px;border:1px solid #222;gap:20px;}.main-content{flex:0 0 70%;}.ad-center{display:flex;justify-content:center;margin:10px 0;}.iframe-container{position:relative;width:100%;padding-top:56.25%;border-radius:10px;overflow:hidden;margin:15px 0;}.post-icons{display:none;}.iframe-container iframe{position:absolute;top:0;left:0;width:100%;height:100%;border:none;border-radius:10px;}.sidebar{flex:0 0 30%;display:flex;flex-direction:column;gap:20px;}.sidebar .ad{width:100%;overflow:hidden;}@media (max-width:768px){.container{flex-direction:column;padding:10px;}.content-box{flex-direction:column;padding:10px;align-items:center;}.main-content,.sidebar{width:100%;}.sidebar{flex-direction:column;align-items:center;gap:20px;margin-top:20px;}.sidebar .ad{width:100%;max-width:100%;}.ad-center{justify-content:center;margin:10px 0;}.iframe-container{width:100%;padding-top:56.25%;}}
+</style>
 </head>
 
 <body>
@@ -78,16 +79,7 @@
     </div>
   </div>
  <script>  
-    const frame = sessionStorage.getItem('frame');
-  const title = sessionStorage.getItem('title');
-
-  if (frame && title) {
-    document.getElementById('player-frame').src = frame;
-    document.getElementById('match-title').textContent = title;
-  } else {
-    document.body.innerHTML = "<h2 style='color:red'>Match not found or expired.</h2>";
-  }
+ (sessionStorage.getItem('frame') && sessionStorage.getItem('title')) ? (document.getElementById('player-frame').src = sessionStorage.getItem('frame'), document.getElementById('match-title').textContent = sessionStorage.getItem('title')) : document.body.innerHTML = "<h2 style='color:red'>Match not found or expired.</h2>";
 </script>
 </body>
-
 </html>
