--- a/404.html
+++ b/404.html
@@ -1,14 +1,53 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="refresh" content="0;url=/" />
-    <script>
-      // JS fallback
-      window.location.replace('/');
-    </script>
-    <title>Redirecting…</title>
-  </head>
-  <body>
-    <p>Redirecting to <a href="/">homepage</a>…</p>
-  </body>
+<html lang="en">
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>404 Not Found</title>
+<style>
+  body {
+    background-color: #000;
+    color: #00ff00;
+    font-family: 'Courier New', Courier, monospace;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+  }
+  h1 {
+    font-size: 10rem;
+    margin: 0;
+  }
+  h2 {
+    font-size: 2rem;
+    margin: 10px 0 30px 0;
+  }
+  p {
+    font-size: 1rem;
+    max-width: 500px;
+    text-align: center;
+    color: #00ff00cc;
+  }
+  a {
+    color: #00ff00;
+    text-decoration: none;
+    border: 1px solid #00ff00;
+    padding: 10px 20px;
+    border-radius: 5px;
+    transition: background-color 0.3s, color 0.3s;
+  }
+  a:hover {
+    background-color: #00ff00;
+    color: #000;
+  }
+</style>
+</head>
+<body>
+  <h1>404</h1>
+  <h2>Page Not Found</h2>
+  <p>Sorry, the page you are looking for does not exist or has been moved.</p>
+  <a href="/">Go to Homepage</a>
+</body>
 </html>
